# CollectiveLevyWalk

./: .gitignore  .nfs0000000010cad92a00000013  CMakeLists.txt  CollectiveLevyWalk.code-workspace  README.md  analysis.py  analyze.py  build.sh  configurations.sh  create_heavy_tailedness_exp_files.sh  create_heavy_tailedness_experiment_files.sh  create_search_efficiency_exp_files.sh  create_search_efficiency_experiment_files.sh  nodes.txt  nohup.out  plot.py  run.sh  run_analysis.sh  run_heavytailedness.sh  run_parallel.sh  run_searchefficiency.sh  run_single.sh
controllers/: CMakeLists.txt
controllers/footbot_acrw/: CMakeLists.txt  footbot_acrw.cpp  footbot_acrw.h
controllers/footbot_clw/: CMakeLists.txt  footbot_clw.cpp  footbot_clw.h
controllers/footbot_ilw/: CMakeLists.txt  footbot_ilw.cpp  footbot_ilw.h
embedding/: CMakeLists.txt  create_patchy_targets.cpp  create_seeds.cpp  create_sparse_targets.cpp  main.cpp
experiments/: acrw.argos  clw.argos  create_heavy_tailedness_experiment_files.sh  create_search_efficiency_experiment_files.sh  ilw.argos  random_walk.argos
experiments/base/: base.argos
loop_functions/: CMakeLists.txt
loop_functions/ilw_loop_functions/: CMakeLists.txt  ilw_loop_functions.cpp  ilw_loop_functions.h
loop_functions/rw_loop_functions/: CMakeLists.txt  rw_loop_functions.cpp  rw_loop_functions.h
output/: mean_LLR_clw.npy  mean_LLR_ilw.npy  mean_pvalue_clw.npy  mean_pvalue_ilw.npy  std_LLR_clw.npy  std_LLR_ilw.npy  std_pvalue_clw.npy  std_pvalue_ilw.npy
seeds/: seeds.txt
targets/: targets_sparse.txt
(+340 files in other folders)
